Cleanup of competition user item view, with prize.