@@ -3,13 +3,15 @@ package com.tradehero.th.api.leaderboard.competition;
 import com.tradehero.common.persistence.DTOKey;
 import com.tradehero.th.api.competition.ProviderId;
 import com.tradehero.th.api.competition.key.CompetitionId;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 public class CompetitionLeaderboardId implements DTOKey
 {
-    public final int providerId;
-    public final int competitionId;
-    public final Integer page;
-    public final Integer perPage;
+    @NotNull public final Integer providerId;
+    @NotNull public final Integer competitionId;
+    @Nullable public final Integer page;
+    @Nullable public final Integer perPage;
 
     //<editor-fold desc="Constructors">
     public CompetitionLeaderboardId(int providerId, int competitionId)
@@ -17,12 +19,12 @@ public class CompetitionLeaderboardId implements DTOKey
         this(providerId, competitionId, null, null);
     }
 
-    public CompetitionLeaderboardId(int providerId, int competitionId, Integer page)
+    public CompetitionLeaderboardId(int providerId, int competitionId, @Nullable Integer page)
     {
         this(providerId, competitionId, page, null);
     }
 
-    public CompetitionLeaderboardId(int providerId, int competitionId, Integer page, Integer perPage)
+    public CompetitionLeaderboardId(int providerId, int competitionId, @Nullable Integer page, @Nullable Integer perPage)
     {
         this.providerId = providerId;
         this.competitionId = competitionId;
@@ -31,34 +33,36 @@ public class CompetitionLeaderboardId implements DTOKey
     }
     //</editor-fold>
 
-    public ProviderId getProviderId()
+    @NotNull public ProviderId getProviderId()
     {
         return new ProviderId(this.providerId);
     }
 
-    public CompetitionId getCompetitionId()
+    @NotNull public CompetitionId getCompetitionId()
     {
         return new CompetitionId(this.competitionId);
     }
 
     @Override public int hashCode()
     {
-         return new Integer(providerId).hashCode() ^
-                new Integer(competitionId).hashCode() ^
-                 (page == null ? new Integer(0) : page).hashCode() ^
-                 (perPage == null ? new Integer(0) : perPage).hashCode();
+         return providerId.hashCode() ^
+                competitionId.hashCode() ^
+                 (page == null ? Integer.valueOf(0) : page).hashCode() ^
+                 (perPage == null ? Integer.valueOf(0) : perPage).hashCode();
     }
 
     @Override public boolean equals(Object other)
     {
-        return super.equals(other);
+        return other != null
+                && other.getClass().equals(getClass())
+                && equalFields((CompetitionLeaderboardId) other);
     }
 
-    public boolean equals(CompetitionLeaderboardId other)
+    protected boolean equalFields(CompetitionLeaderboardId other)
     {
         return other != null &&
-                this.providerId == other.providerId &&
-                this.competitionId == other.competitionId &&
+                this.providerId.equals(other.providerId) &&
+                this.competitionId.equals(other.competitionId) &&
                 (this.page == null ? other.page == null : this.page.equals(other.page)) ^
                 (this.perPage == null ? other.perPage == null : this.perPage.equals(other.perPage));
     }
